# db-gen

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs
src/cli/: generate.rs  mod.rs
